# servant-checked-exceptions

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  cabal.project  servant-checked-exceptions.cabal  stack.yaml
.github/workflows/: ci.yml
example/: Api.hs  Client.hs  Docs.hs  Example.hs  Server.hs
servant-checked-exceptions/: CHANGELOG.md  LICENSE  servant-checked-exceptions.cabal
servant-checked-exceptions-core/: CHANGELOG.md  servant-checked-exceptions-core.cabal
servant-checked-exceptions-core/example/: Api.hs
servant-checked-exceptions-core/src/Servant/Checked/: Exceptions.hs
servant-checked-exceptions-core/src/Servant/Checked/Exceptions/: Envelope.hs  Internal.hs  Verbs.hs
servant-checked-exceptions-core/src/Servant/Checked/Exceptions/Internal/: Envelope.hs  EnvelopeT.hs  FlatEnvelope.hs  Prism.hs  Servant.hs  Util.hs  Verbs.hs
servant-checked-exceptions-core/src/Servant/Checked/Exceptions/Internal/Servant/: API.hs  Docs.hs
servant-checked-exceptions/example/: Api.hs  Client.hs  CustomEnvelope.hs  EnvelopeT.hs
servant-checked-exceptions/src/Servant/Checked/: Exceptions.hs
servant-checked-exceptions/src/Servant/Checked/Exceptions/: Internal.hs
servant-checked-exceptions/src/Servant/Checked/Exceptions/Internal/Servant/: API.hs  Client.hs  Server.hs
servant-checked-exceptions/test/: Spec.hs
src/Servant/Checked/: Exceptions.hs
src/Servant/Checked/Exceptions/: Internal.hs
src/Servant/Checked/Exceptions/Internal/: Envelope.hs  Prism.hs  Product.hs  Servant.hs  Union.hs  Util.hs
src/Servant/Checked/Exceptions/Internal/Servant/: API.hs  Client.hs  Docs.hs  Server.hs
src/Servant/Static/: TH.hs
src/Servant/Static/TH/: Internal.hs
src/Servant/Static/TH/Internal/: Api.hs  FileTree.hs  Mime.hs  Server.hs  Util.hs
test/: Spec.hs
test/Spec/: ApiSpec.hs  HelperFuncSpec.hs  ServerSpec.hs  TastyHelpers.hs  TestDirLocation.hs
test/test-dir/dir/: inner-file.html
