name:                servant-checked-exceptions
version:             0.1.0.3
synopsis:            Embed a directory of static files in your Servant server
description:         Please see <https://github.com/cdepillabout/servant-checked-exceptions#readme README.md>.
homepage:            https://github.com/cdepillabout/servant-checked-exceptions
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag buildexample
  description: Build a small example program
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Checked.Exceptions
                     -- , Servant.Static.TH.Internal
                     -- , Servant.Static.TH.Internal.Api
                     -- , Servant.Static.TH.Internal.FileTree
                     -- , Servant.Static.TH.Internal.Mime
                     -- , Servant.Static.TH.Internal.Server
                     -- , Servant.Static.TH.Internal.Util
  build-depends:       base >= 4.8 && < 5
                     -- , bytestring
                     -- , containers
                     -- , http-media
                     -- , semigroups
                     , lens
                     , servant >= 0.8
                     , servant-server >= 0.8
                     -- , template-haskell
                     -- , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

-- executable servant-checked-exceptions-example
--   main-is:             Example.hs
--   hs-source-dirs:      example
--   build-depends:       base
--                      , servant-server
--                      , servant-checked-exceptions
--                      , wai
--                      , warp
--   default-language:    Haskell2010
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

--   if flag(buildexample)
--     buildable:         True
--   else
--     buildable:         False

test-suite servant-checked-exceptions-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

-- test-suite servant-checked-exceptions-test
--   type:                exitcode-stdio-1.0
--   main-is:             Spec.hs
--   other-modules:       Spec.ApiSpec
--                      , Spec.HelperFuncSpec
--                      , Spec.ServerSpec
--                      , Spec.TastyHelpers
--                      , Spec.TestDirLocation
--   hs-source-dirs:      test
--   build-depends:       base
--                      , bytestring
--                      , directory
--                      , filepath
--                      , hspec-wai
--                      , tasty
--                      , tasty-hspec
--                      , tasty-hunit
--                      , servant
--                      , servant-checked-exceptions
--                      , servant-server
--                      , wai
--   default-language:    Haskell2010
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction

source-repository head
  type:     git
  location: git@github.com:cdepillabout/servant-checked-exceptions.git
