name:                servant-checked-exceptions
version:             2.0.0.0
synopsis:            Checked exceptions for Servant APIs.
description:         Please see <https://github.com/cdepillabout/servant-checked-exceptions#readme README.md>.
homepage:            https://github.com/cdepillabout/servant-checked-exceptions
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017-2018 Dennis Gosnell
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10

flag buildexample
  description: Build a small example program
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Checked.Exceptions
                     , Servant.Checked.Exceptions.Internal
                     , Servant.Checked.Exceptions.Internal.Servant
                     , Servant.Checked.Exceptions.Internal.Servant.API
                     , Servant.Checked.Exceptions.Internal.Servant.Client
                     , Servant.Checked.Exceptions.Internal.Servant.Server
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , deepseq
                     , http-media
                     , http-types
                     , profunctors
                     , tagged
                     , servant >= 0.12
                     , servant-checked-exceptions-core
                     , servant-client >= 0.12
                     , servant-client-core >= 0.12
                     , servant-docs >= 0.10
                     , servant-server >= 0.12
                     , text
                     , wai
                     , world-peace
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable servant-checked-exceptions-example-client
  main-is:             Client.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base
                     , aeson
                     , http-api-data
                     , http-client
                     , http-types
                     , optparse-applicative
                     , servant
                     , servant-checked-exceptions
                     , servant-client
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

executable servant-checked-exceptions-example-docs
  main-is:             Docs.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base
                     , aeson
                     , http-api-data
                     , http-types
                     , servant
                     , servant-checked-exceptions
                     , servant-docs
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

executable servant-checked-exceptions-example-server
  main-is:             Server.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base
                     , aeson
                     , http-api-data
                     , http-types
                     , natural-transformation
                     , servant
                     , servant-checked-exceptions
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

test-suite servant-checked-exceptions-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
  hs-source-dirs:      test
  build-depends:       base
                     , bytestring
                     , hspec-wai
                     , http-types
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , servant
                     , servant-checked-exceptions
                     , servant-server
                     , wai
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction

source-repository head
  type:     git
  location: git@github.com:cdepillabout/servant-checked-exceptions.git
